Fixed Layout Issue.

--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,10 @@ body {
   background-color: #FFFFFF;
   color: black;
   padding: 1em 3em;
-  box-shadow: 0.2em 0.2em 1.5em #ABCBF0;
+  box-shadow: 0.2em 0.2em 1.5em #4A90E2;
 }
 .App-button:hover {
   text-decoration: none;
   color: black;
-  box-shadow: 0.4em 0.4em 1.5em #ABCBF0;
+  box-shadow: 0.4em 0.4em 1.5em #4A90E2;
 }
